re PR target/32218 (segfault with -O1 -ftree-vectorize)

PR target/32218
	* tree-vect-patterns.c (vect_pattern_recog_1): Check for valid type.

From-SVN: r127062